--- a/index.html
+++ b/index.html
@@ -1,6 +1,39 @@
 <!doctype html>
 <html lang="en">
   <head>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <title>Эксперт</title>
+    <link rel ="stylesheet" href="src/index.css">
+  </head>
+  <body>
+    <footer>
+      <div class="blocks-container">
+        <div class="footer-col">
+          <h4>Информация</h4>
+          <ul>
+            <li>Услуги</li>
+            <li>О клинике</li>
+            <li>Преимущества</li>
+            <li>Врачи</li>
+            <li>Цены</li>
+            <li>Отзывы</li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Эксперт</h4>
+          <p>Ведущая медицинская клиника в Бишкеке, специализирующаяся на УЗИ диагностике, ведении беременности и гинекологии. </p>
+          <p><i class="fa fa-phone"></i> +996 (312) 123-456</p>
+        </div>
+        <div class="footer-col">
+          <h4>Контакты</h4>
+          <p><i class="fa fa-map-marker-alt"></i> г. Бишкек ул. Койбагарова, 95</p>
+          <p><i class="fa fa-envelope"></i> info@expertclinic.kg</p>
+          <p><i class="fa fa-clock"></i> Пт-Пн 8:00 - 18:00<br>Сб 8:00 - 14:00</p>
+        </div>
+      </div>
+      <hr>
+      <p>© 2025 Эксперт. Все права защищены.</p>
+    </footer>
   </body>
 </html>
